--- a/Style.css
+++ b/Style.css
@@ -1,7 +1,7 @@
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/") top center;
+  background: url("../Adobe Scan Mar 14, 2022_1.jpg") top center;
   background-size: cover;
 }
 
