--- a/main/style2.css
+++ b/main/style2.css
@@ -1,5 +1,5 @@
 header{
-  background-image:url("assests/homepage.jpg");
+  background-image:url("assets/homepage.jpg");
   background-position:center;
   background-size:cover;
   background-repeat:no-repeat;
