--- a/main/style.css
+++ b/main/style.css
@@ -1,6 +1,6 @@
 #hero {
-  width: 100%;
-  height: 300vh;
+  width: 50%;
+  height: 100%;
   background: url("../assets/homepage.jpg") top center;
   background-size: cover;
 }
