--- a/main/style.css
+++ b/main/style.css
@@ -1,6 +1,6 @@
 #hero {
-  width: 100%;
-  height: 100%;
+  width:1024px;
+  height:786px;
   background: url("../assets/homepage.jpg") top center;
   background-size: cover;
 }
