--- a/main/style.css
+++ b/main/style.css
@@ -1,6 +1,6 @@
 #hero {
   width:1055px;
   height:800px;
-  background: url("../assets/homepage.jpg") top center;
+  background: url("../assets/homepage.png") top center;
   background-size: cover;
 }
