--- a/main/style.css
+++ b/main/style.css
@@ -4,10 +4,10 @@
   background: url("../assets/homepage.png") top center;
   background-size: cover;
 }
-.header{
+#header{
             background-color:#CCeEFE;
             color:#bf5e75;
-            padding:25px;
+            padding:205px;
             text-align:center;
             font-size:40px;
             box-shadow:0 10px 20px rgba(0,0,0,0.19),0 6px 6px rgba(0,0,0,0.23);
