--- a/main/style.css
+++ b/main/style.css
@@ -7,7 +7,8 @@
 #header{
             background-color:#CCeEFE;
             color:#bf5e75;
-            padding:205px;
+            padding:1024px;
+            height:50px;
             text-align:center;
             font-size:40px;
             box-shadow:0 10px 20px rgba(0,0,0,0.19),0 6px 6px rgba(0,0,0,0.23);
