--- a/main/style.css
+++ b/main/style.css
@@ -5,12 +5,16 @@
   background-size: cover;
 }
 #header{
-            background-color:#CCeEFE;
-            color:#bf5e75;
-            padding:80px;
+            width:200px;
+            height:60px;
+            Background:#ffcccc;
             text-align:center;
             font-size:40px;
             box-shadow:0 10px 20px rgba(0,0,0,0.19),0 6px 6px rgba(0,0,0,0.23);
-            border-radius:10%;
             font-family:florence, cursive;
+            animation:mymove 10s infinite;
         }
+@keyframe mymove {
+from { background-color:#ffcccc;}
+to { background-color:#ccffff;}
+}
