--- a/main/style.css
+++ b/main/style.css
@@ -4,12 +4,19 @@
   background: url("../assets/homepage.png") top center;
   background-size: cover;
 }
-#header {
-            width:200px;
-            height:60px;
-            background:linear-gradient(35deg , #CCFFFF, #FFCCCC);
-            text-align:center;
-            font-size:40px;
-            box-shadow:0 10px 20px rgba(0,0,0,0.19),0 6px 6px rgba(0,0,0,0.23);
-            font-family:florence, cursive;
-        }
+
+    #bar{
+    position:absolute;text-align:center;
+    width:350px;
+    top:15px;
+    right:5px;
+    height:35px;
+    background:#021356;
+    border-radius:20px;
+    box-shadow:
+        0px 3px 3px 0px rgba(0, 0, 0, 0.5) inset,
+        0px 2px 2px 0px rgba(255, 255, 255, 0.4);
+    z-index:2;
+    transition:1.5s;
+}
+
