--- a/main/style.css
+++ b/main/style.css
@@ -1,10 +1,9 @@
-
+1111
 #hero {
   width: 1024px;
   height: 800px;
   background: url("../assets/homepage.png") top center;
   background-size: cover;
-  
 }
     #bar{
     position:absolute;text-align:center;
