--- a/main/style.css
+++ b/main/style.css
@@ -5,13 +5,14 @@
   background: url("../assets/homepage.png") top center;
   background-size: cover;
 }
- div {
-    position:absolute;text-align:center;
+#nav {
+    position:absolute;
+    text-align:center;
     width:350px;
     top:15px;
     right:5px;
     height:35px;
-    background:#021356;
+    background:#ffcccc;
     border-radius:20px;
     box-shadow:
         0px 3px 3px 0px rgba(0, 0, 0, 0.5) inset,
