--- a/main/style.css
+++ b/main/style.css
@@ -5,4 +5,17 @@
   background: url("../assets/homepage.png") top center;
   background-size: cover;
 }
-
+#nav{
+    position:absolute;text-align:center;
+    width:650px;
+    top:15px;
+    right:5px;
+    height:45px;
+    background:#021356;
+    border-radius:20px;
+    box-shadow:
+        0px 3px 3px 0px rgba(0, 0, 0, 0.5) inset,
+        0px 2px 2px 0px rgba(255, 255, 255, 0.4);
+    z-index:2;
+    transition:1.5s;
+}
