--- a/main/style.css
+++ b/main/style.css
@@ -1,7 +1,7 @@
 
 #hero {
   padding:80px;
-  margin:35px;
+  width:822px;
   background: url("../assets/homepage.png") top center;
   background-size: cover;
 }
