--- a/main/style.css
+++ b/main/style.css
@@ -1,6 +1,6 @@
 
 #hero {
-  padding:80px;
+  height:1044px;
   width:822px;
   background: url("../assets/homepage.png") top center;
   background-size: cover;
