--- a/main/style.css
+++ b/main/style.css
@@ -6,4 +6,9 @@
   background-size: 100% 100%;
   height:1014px;
 }
-
+.tabs {
+  border: 1px solid #c3c3c3;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
