--- a/main/style.css
+++ b/main/style.css
@@ -7,8 +7,10 @@
   height:1014px;
 }
 .tabs {
-  border: 5px solid #c3c3c3;
-  display: flex;
+  border-radius: 15px;
+  display: inline-block;
   flex-wrap: wrap;
   float:center;
+  padding:15px 15px;
+  
 }
