--- a/main/style.css
+++ b/main/style.css
@@ -11,22 +11,26 @@
   display: inline-block;
   flex-wrap: wrap;
   float:center;
+  left:50px;
 }
 #tab2 {
   border-radius: 10%;
   display: inline-block;
   flex-wrap: wrap;
   float:center;
+  left:50px;
 }
 #tab3 {
   border-radius: 10%;
   display: inline-block;
   flex-wrap: wrap;
   float:center;
+  left:50px;
 }
 #tab4 {
   border-radius: 10%;
   display: inline-block;
   flex-wrap: wrap;
   float:center;
+  left:50px;
 }
