--- a/main/style.css
+++ b/main/style.css
@@ -11,26 +11,26 @@
   display: inline-block;
   flex-wrap: wrap;
   float:center;
-  left:50px;
+  background: top center;
 }
 #tab2 {
   border-radius: 10%;
   display: inline-block;
   flex-wrap: wrap;
   float:center;
-  left:50px;
+  background: top center;
 }
 #tab3 {
   border-radius: 10%;
   display: inline-block;
   flex-wrap: wrap;
   float:center;
-  left:50px;
+  background: top center;
 }
 #tab4 {
   border-radius: 10%;
   display: inline-block;
   flex-wrap: wrap;
   float:center;
-  left:50px;
+  background: top center;
 }
