--- a/main/style.css
+++ b/main/style.css
@@ -10,8 +10,8 @@
   border-radius: 10%;
   display: inline-block;
   flex-wrap: wrap;
-  float:center;
-  background: top center;
+  margin-left:50px;
+  float:right;
 }
 #tab2 {
   border-radius: 10%;
